skidata/03_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wiremock-skidata-service
  labels:
    app: wiremock-skidata
spec:
  selector:
    app: wiremock-skidata
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
