skidata/05_httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wiremock-skidata-httproute
  namespace: platform
  labels:
    app: wiremock-skidata
spec:
  parentRefs:
  - name: main-gateway
    namespace: platform
    sectionName: platform-https
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /bei/DTASales/ReservationApi/reservation/v1/
    backendRefs:
    - name: wiremock-skidata-service
      namespace: wiremock
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: platform-to-wiremock-skidata
  namespace: wiremock
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: platform
  to:
  - group: ""
    kind: Service
    name: wiremock-skidata-service
